@@ -9,8 +9,7 @@ import com.example.soccerCommunity.repository.UserInfoRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -27,11 +26,11 @@ public class CommentService {
         this.communityRepository = communityRepository;
     }
 
-    public List<CommentDto> getComments(Long id) {
+    public List<CommentDto> getComments(Long communityId) {
 
-        List<Comment> commentList = commentRepository.findByCommunityId(id);
+        List<Comment> allComments = commentRepository.findByCommunityIdAndParentIsNullOrderByCreatedAtAsc(communityId);
 
-        return commentList.stream().map(CommentDto::toDto).toList();
+        return allComments.stream().map(CommentDto::toDto).collect(Collectors.toList());
     }
 
     @Transactional
@@ -47,6 +46,20 @@ public class CommentService {
         Comment created = commentRepository.save(comment);
 
         return CommentDto.toDto(created);
+    }
+
+    @Transactional
+    public CommentDto createReply(String username, Long communityId, Long parentId, CommentDto commentDto) {
+        String nickname = userInfoRepository.findByUser_Username(username).getNickname();
+        Community community = communityRepository.findById(communityId).orElse(null);
+        Comment parentComment = commentRepository.findById(parentId).orElse(null);
+
+        if (community == null || parentComment == null) return null;
+
+        Comment reply = Comment.toReplyEntity(nickname, community, commentDto, parentComment);
+        Comment createdReply = commentRepository.save(reply);
+
+        return CommentDto.toDto(createdReply);
     }
 
     public CommentDto updateComment(String username, Long id, CommentDto commentDto) {
@@ -75,7 +88,13 @@ public class CommentService {
         community.setCommentsCount(community.getCommentsCount() - 1L);
         communityRepository.save(community);
 
-        commentRepository.delete(comment);
+        // 대댓글이 있는 경우 내용만 "삭제된 댓글입니다."로 변경
+        if (!comment.getChildren().isEmpty()) {
+            comment.setContent("삭제된 댓글입니다.");
+            commentRepository.save(comment);
+        } else {
+            commentRepository.delete(comment);
+        }
 
         return CommentDto.toDto(comment);
     }
